adicao do card demons souls e dados do game

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
     <div class="last-game__info">
       <h3 class="last-game__title">The Last of Us</h3>
       <p class="last-game__text">
-        Só fui jogar The Last of Us em 2016, bastante tempo depois do lançamento, eu não tinha PS3, entrei na onda do
+        Só fui jogar The Last of Us em 2015, bastante tempo depois do lançamento, eu não tinha PS3, entrei na onda do
         Xbox 360, mas já tinha um tempo que eu não jogava nada. Foi uma época onde eu só estudava e trabalhava, me
         afastei um pouco dos games porque não sobrava muito tempo pra jogar, até que dois amigos do trabalho me
         convenceram a comprar o PS4, eu não queria, mas que bom que eu comprei, e o game que veio junto com o console
@@ -96,11 +96,11 @@
     </div>
 
     <div class="game-card">
-      <a href="">
-        <img class="game-card__img" src="./assets/img/alex-kid.png" alt="">
+      <a href="./articles/demons-souls.html">
+        <img class="game-card__img" src="./assets/demons-souls/card-demons-souls.png" alt="card do game Demons Souls">
         <div class="game-card__description">
-          <p class="game-card__description__title">Alex Kidd</p>
-          <p class="game-card__description__year">2021</p>
+          <p class="game-card__description__title">Demon's Souls</p>
+          <p class="game-card__description__year">2020</p>
         </div>
         <p class="game-card__p">Ver Mais</p>
       </a>
