adicao do card demons souls em artigos

--- a/artigos.html
+++ b/artigos.html
@@ -71,11 +71,11 @@
     </div>
 
     <div class="game-card">
-      <a href="">
-        <img class="game-card__img" src="./assets/img/alex-kid.png" alt="">
+      <a href="./articles/demons-souls.html">
+        <img class="game-card__img" src="./assets/demons-souls/card-demons-souls.png" alt="Imagem do game Demons Souls">
         <div class="game-card__description">
-          <p class="game-card__description__title">Alex Kidd</p>
-          <p class="game-card__description__year">2021</p>
+          <p class="game-card__description__title">Demon's Souls</p>
+          <p class="game-card__description__year">2020</p>
         </div>
         <p class="game-card__p">Ver Mais</p>
       </a>
