update dos links

--- a/index.html
+++ b/index.html
@@ -131,9 +131,11 @@
 
   <footer class="footer">
     <div class="footer__social">
-      <a href="#"><img src="./assets/instagram.png" alt="Logo do Instagram"></a>
-      <a href="#"><img src="./assets/twitch.png" alt="Logo do Instagram"></a>
-      <a href="#"><img src="./assets/youtube.png" alt="Logo do Instagram"></a>
+      <a href="https://www.instagram.com/diariogamerbr/"><img src="../assets/instagram.png" alt="Logo do Instagram">
+      </a>
+      <a href="https://www.twitch.tv/nandoalison"><img src="../assets/twitch.png" alt="Logo do Instagram"></a>
+      <a href="https://www.youtube.com/channel/UCRxdkx1qQwc6bB3J1PC7ALA"><img src="../assets/youtube.png"
+          alt="Logo do Instagram"></a>
     </div>
     <p>Diário Gamer &copy 2024 - Desenvolvido por Fernando Alisson</p>
   </footer>
