adicao dos cards de fort-fifa

--- a/artigos.html
+++ b/artigos.html
@@ -82,11 +82,11 @@
     </div>
 
     <div class="game-card">
-      <a href="">
-        <img class="game-card__img" src="./assets/img/bloodborne.png" alt="">
+      <a href="./articles/fort-fifa.html">
+        <img class="game-card__img" src="./assets/fort-fifa/card-fort-fifa.png" alt="">
         <div class="game-card__description">
-          <p class="game-card__description__title">Bloodborne</p>
-          <p class="game-card__description__year">2015</p>
+          <p class="game-card__description__title">Fortnite e Fifa EA FC</p>
+          <p class="game-card__description__year">2017</p>
         </div>
         <p class="game-card__p">Ver Mais</p>
       </a>
