--- a/artigos.html
+++ b/artigos.html
@@ -27,7 +27,7 @@
   </header>
 
   <div class="barra-busca">
-    <input class="barra-busca__txt-busca" name="busca" id="txt-busca" type="text" placeholder="Digite o nome do game">
+    <input class="barra-busca__txt-busca" name="busca" id="txt-busca" type="search" placeholder="Digite o nome do game">
     <!-- 
       <button id="btn-busca" class="barra-busca__btn-busca">Buscar</button> 
     -->
